The order within a sheet is a rule; depth and filter take the states
A component is free to wear two classes on one target — a base and a
look beside it — so which wins must be a rule, not the JVM's hash order.
Sheets now emits a target's rules by the semantic's branch — Layer, Text,
Box, Brand, Structure, Emphasis, Feedback, Pairing, Interaction — then by
leaf: what a thing is, before what it says, before what it does. The
deployment keeps its requirement set and its resolution in order too.

A body may nest on self only a State's slot or a pseudo-element: a design
does not invent a state of the component. Elements below stay its own.

Shape.Shadow and Effect.Filter now offer the interactive slots, and one
slot joins the vocabulary — HIGHLIGHTED, on data-highlighted, for a thing
lit from elsewhere that no aria word names. The three physiques say what
selected and highlighted depth is (Brutalism sits up on its offset
shadow, Futurism glows, Default lifts softly), and a row lifts by
drop-shadow filter, which a browser paints where it paints no box-shadow
on a table row; the palettes colour the highlighted state. The preview
table's rows wear the filter and stack while lifted.